--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,31 @@
-title: Test page
-description: n/a
-remote_theme: Mediumish
+remote_theme             : Mediumish
+markdown                 : kramdown
+
+# Site Settings
+locale                   : "en-US"
+title                    : "Testing Page"
+description              : "Test page for notes and project documentation"
+url                      : "https://judeha.github.io"
+
+# Plugins
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+  - jekyll-remote-theme
+
+# Read Files
+include: 
+  - _pages
+
+defaults:
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: false
