--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme             : Mediumish
+# remote_theme             : Mediumish
+theme                    : theme: jekyll-theme-minimal
 markdown                 : kramdown
 
 # Site Settings
