--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,6 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-layout: home # NEW
 title: Test Site
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -42,9 +41,9 @@ plugins:
   - jekyll-include-cache
   - jekyll-remote-theme
 
-# Read Files
-include: 
-  - _pages
+# # Read Files
+# include: 
+#   - _pages
 
 # Exclude from processing
 exclude:
