Revert to minima theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,18 +28,21 @@ url: "https://judeha.github.io" # the base hostname & protocol for your site, e.
 # github_username:  jekyll
 
 # Build settings
-theme: minimal-mistakes-jekyll
+theme: minima
+# theme: minimal-mistakes-jekyll
 markdown: kramdown
-minimal_mistakes_skin    : "plum" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+# minimal_mistakes_skin    : "plum" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
+# plugins:
+#   - jekyll-paginate
+#   - jekyll-sitemap
+#   - jekyll-gist
+#   - jekyll-feed # only original one
+#   - jemoji
+#   - jekyll-include-cache
+#   - jekyll-remote-theme
 plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed # only original one
-  - jemoji
-  - jekyll-include-cache
-  - jekyll-remote-theme
+    - jekyll-feed
 
 # # Read Files
 # include: 
@@ -51,14 +54,14 @@ exclude:
   - Gemfile.lock
   - node_modules
 
-defaults:
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: false
+# defaults:
+#   # _pages
+#   - scope:
+#       path: "_pages"
+#       type: pages
+#     values:
+#       layout: single
+#       author_profile: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
